sftp/2.1/modules/ROOT/pages/sftp-connector-upgrade-guide.adoc
= Upgrade and Migrate SFTP Connector to Version 2.x  - Mule 4

Upgrade Anypoint Connector for SFTP (SFTP Connector) to version 2.x.x.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|1.6.0 |2.x.x
|===

== Changes in This Release

This release contains the following changes:

* The system property `mule.sftp.useHomeDirectory` was removed. SFTP Connector now uses the default home directory.
* SFTP Connector 2.x.x no longer supports the `jcraft library`. The connector now uses the `apache mina sshd` library.
* Apache Mina does not support S3 SFTP Server on SFTP Connector 2.x.x.
* The *List* operation no longer fetches the content of each file. Now, the payload of each list item contains the complete path to the found file or directory. 
* The SFTP *Regular Size* file attribute is renamed to *Regular File* because its behavior is not related to size. The file attribute value can be a file (`true`) or a directory (`false`).
* SFTP Connector 2.x.x does not support ciphers `3des-ctr` and `arcfour`. For more information, refer to <<supported-ciphers,Supported Ciphers project>>.
* The SFTP proxy protocol works only with HTTP and SOCKS5.
* SFTP Connector no longer uses `javax.activation` to resolve the media types of the files. The connector now uses `Apache Tika`, which can result in different media file interpretations.
* The connector changed the classes to manage the date from `LocalDateTime` to `ZonedDateTime`.
* The deprecated *Encoding* parameter in the configuration and *Write* operation is removed. The connector uses the Mule's default encoding.
// List all changes that affect users, including changed schemas, 
// changed data structures, changed POM files, changed and new fields 
// (locations, names, etc) and parameters, deprecated parameters, etc

// Examples:
//
// * The create operation name changed from old-name to new-name.
// * The field-name>is now located in the tab-name tab.
// * What happens with the upgrade? Are changes made to app data? 
// * The single global configuration is divided into operation and source-specific global configurations like:
// ** send-config - used by send-with-sync-mdn and send-with-async-mdn operations.
// ** listener-config - used by as2-listener source.
// ** mdn-listener-config - used by as2-mdn-listener source.
// * Changed namespace from <old-namespace> to <new-namespace>.

// If applicable, use tables to describe new and changed operations and sources. Examples follow: 

////

[[changed_operations]]
== Changed Operations

[%header%autowidth.spread]
|===
|Operation | Description | Parameters

| <operation-name>, for example: *Commit*
a| Enter a description for the operation, for example: Commits the offsets associated to a message or batch of messages consumed in a message listener. a| Specify the operation parameters. Example: Consumer commit key. The consumer commit key to use to commit the message.
|===

[[changed_sources]]
== Changed Sources

[%header%autowidth.spread]
|===
|Source | Earlier version | Parameters

| <name-in-new-version>, for example: *Message listener* | <name-in-oldMessage consumer a| * Poll timeout
* Poll timeout time unit
* Acknowledgment mode
* Number of parallel consumers
|===
////


== Requirements

Ensure that you meet these requirements before you perform the upgrade:


[%header,cols="50a,50a"]
|===
|Software | Version
|Mule |4.3.0 and later
|Anypoint Studio |7.5.0 and later
|JDK |8
|===

== Upgrade Prerequisites

Before you perform the upgrade, you must complete the following:

* Create a backup of your files, data, and configurations in case you need to restore to them. 
// * Do they need to rename or copy over any files before downloading the latest version?

== Upgrade Steps

Follow these steps to perform the upgrade:

. In Anypoint Studio, create a Mule project.
. In *Mule Palette*, click *Search in Exchange*.
. In *Add Dependencies to Project*, enter `SFTP` in the search field.
. In *Available modules*, select *SFTP Connector* and click *Add*.
. Click *Finish*.
. Verify that the SFTP Connector `mule-sftp-connector` version is `2.x.x` in the `pom.xml` file in the Mule project.

Studio upgrades the connector automatically.

// * Download the current version. 
// * Import data?
// * Update the configuration.
// * What does the user need to do after downloading the connector before they can start using it?

== Post Upgrade Steps

After you install the latest version of the connector, follow these steps to complete the upgrade:

// * Do they need to update endpoints? 
// * Do they need to re-create/refactor any customizations?
// * Does the user need to map any files?
// * Verify the upgrade.

=== Verify the Upgrade

After you install the latest version of the connector, verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Verify that there are no problems in the project `pom.xml` file.
. Test the connection to verify that the operations work.

[[supported-ciphers]]
== Supported Ciphers 

The Apache Mina SSHD library does not support ciphers `3des-ctr` and `arcfour`. Additionally, the library introduces `aes128-gcm`, `aes256-gcm`, and `cc20p1305_openssh` as alternatives.

[NOTE]
For the current version of the SFTP Connector, you must stick to the Apache Mina default options. Refer to the https://github.com/apache/mina-sshd/blob/sshd-2.12.1/docs/standards.md#implementedavailable-support[Apache Mina Supported Standards].

For details, review the following table:

[%header,cols="50a,50a"]
|===
|http://www.jcraft.com/jsch/[JSCH] - SFTP Connector 1.6 | https://github.com/apache/mina-sshd/blob/sshd-2.9.2/sshd-common/src/main/java/org/apache/sshd/common/cipher/BuiltinCiphers.java[MINA SSHD] - SFTP Connector 2.0
|`blowfish-cbc` |`blowfish-cbc` (Deprecated)
|`3des-cbc` |`3des-cbc` (Deprecated)
|`3des-ctr` | Not supported.
|`aes128-cbc` |`aes128-cbc`
|`aes128-ctr` |`aes128-ctr`
| Not supported. |`aes128-gcm`
|`aes192-cbc`|`aes192-cbc`
|`aes192-ctr` |`aes192-ctr`
|`aes256-cbc`|`aes256-cbc`
|`aes256-ctr`|`aes256-ctr`
| Not supported. |`aes256-gcm`
|`arcfour`| Not supported.
|`arcfour128` |`arcfour128` (Deprecated)
|`arcfour256` |`arcfour256` (Deprecated)
| Not supported. |`cc20p1305_openssh`
|===

[[supported-cryptographic-entities]]
== Other Supported Cryptographic Entities

[%header]
|===
|Kex Algorithms|Host Key Algorithms|MACs
|`curve25519-sha256`*|`ecdsa-sha2-nistp256-cert-v01@openssh.com`|`hmac-sha2-256-etm@openssh.com`
|`curve25519-sha256@libssh.org`*|`ecdsa-sha2-nistp384-cert-v01@openssh.com`|`hmac-sha2-512-etm@openssh.com`
|`curve448-sha512`*|`ecdsa-sha2-nistp521-cert-v01@openssh.com`|`hmac-sha1-etm@openssh.com`
|`ecdh-sha2-nistp521`|`ssh-ed25519-cert-v01@openssh.com`|`hmac-sha2-256`
|`ecdh-sha2-nistp384`|`rsa-sha2-512-cert-v01@openssh.com`|`hmac-sha2-512`
|`ecdh-sha2-nistp256`|`rsa-sha2-256-cert-v01@openssh.com`|`hmac-sha1`
|`diffie-hellman-group-exchange-sha256`|`ecdsa-sha2-nistp256`|`hmac-md5` (Deprecated)
|`diffie-hellman-group18-sha512`|`ecdsa-sha2-nistp384`|`hmac-md5-96` (Deprecated)
|`diffie-hellman-group17-sha512`|`ecdsa-sha2-nistp521`|`hmac-sha1-96` (Deprecated)
|`diffie-hellman-group16-sha512`|`ssh-ed25519`**|
|`diffie-hellman-group15-sha512`|`sk-ecdsa-sha2-nistp256@openssh.com`|
|`diffie-hellman-group14-sha256`|`sk-ssh-ed25519@openssh.com`**|
|`diffie-hellman-group1-sha1` (Deprecated)|`rsa-sha2-512`|
|`diffie-hellman-group14-sha1` (Deprecated)|`rsa-sha2-256`|
|`diffie-hellman-group-exchange-sha1` (Deprecated)|`ssh-rsa`|
||`ssh-dss` (Deprecated)|
||`ssh-dss-cert-v01@openssh.com` (Deprecated)|
||`ssh-rsa-cert-v01@openssh.com` (Deprecated)|
|===

`*` These algorithms require Bouncy Castle on Java versions before Java 11. +

`**` These algorithms require externally EdDSA (Edwards-curve Digital Signature Algorithm) library.

== Troubleshooting

// If there are common known issues and errors that occur when upgrading, give troubleshooting tips.

=== Reverting the Upgrade

If you need to revert to the previous version of SFTP Connector, go to Anypoint Studio and in the project’s `pom.xml` file, change the `mule-sftp-connector` dependency version 2.x.x to the previous version.

=== Override SSH Connection Security Configuration

If you face SSH connection issues due to unsupported ciphers, macs, hostKeyAlgorithms or kexAlgorithms, then change the priority or enable deprecated ciphers and algorithms forcefully. Although using this method may introduce additional risk. Refer to xref:sftp-security-configuration-override.adoc[Configure Security Parameters of SSH Connection] and xref:sftp-documentation.adoc[SFTP Connector Reference].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
